# glfw

./: .gitignore  CMakeLists.txt  README.md
cmake/: dependencies.cmake
res/shaders/: basic.frag  basic.vert  circle.frag  circle.vert  cube.vert  main.frag  skybox.vert  texture.vert
shaders/: main.vert
src/: Application.cpp  Application.h  Data.h  Debug.h  IndexBuffer.h  Mesh.h  Program.cpp  Program.h  VertexArray.cpp  VertexBuffer.h  glApplication.cpp  glApplication.h  glData.h  glProgram.cpp  glProgram.h  main.cpp
src/app/: Application.cpp  Application.h  InputSystem.cpp  InputSystem.h
src/core/: Camera.cpp  Camera.h
src/core/scene/: CircleScene.cpp  CircleScene.h  ClearColorScene.cpp  ClearColorScene.h  CubeScene.cpp  CubeScene.h  ImportScene.cpp  ImportScene.h  Scene.h  SkyboxScene.cpp  SkyboxScene.h  TextureScene.cpp  TextureScene.h
src/gl/: Camera.cpp  Camera.h  Debug.cpp  Debug.h  IndexBuffer.cpp  IndexBuffer.h  Program.cpp  Program.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
src/glAbstraction/: Debug.cpp  Debug.h  IndexBuffer.cpp  IndexBuffer.h  Program.cpp  Program.h  Renderer.cpp  Renderer.h  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBufferLayout.cpp  VertexBufferLayout.h
src/scene/: BasicScene.cpp  BasicScene.h  ClearColor.cpp  ClearColor.h  ClearColorScene.cpp  ClearColorScene.h  ColorCube.cpp  ColorCube.h  CubeScene.cpp  CubeScene.h  Scene.h  TextureScene.cpp  TextureScene.h
src/utils/: Color.h  Data.h  Loader.cpp  Loader.h  OBJParser.cpp  OBJParser.h
